[tool.poetry]
name = "llm-test-repo"
version = "0.1.0"
description = ""
authors = ["Espinoza, William"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.1.19"
langchain-anthropic = "^0.1.22"
ipython = "^8.26.0"
transformers = "^4.44.0"
torch = "^2.4.0"
accelerate = "^0.33.0"
bitsandbytes = "0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
