[tool.poetry]
name = "llm-finetune"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
transformers = "^4.55.4"
datasets = "^4.0.0"
torch = {version = "^2.8.0", extras = ["cpu"]}
accelerate = "^1.10.0"
nbstripout = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
