[tool.poetry]
name = "llm-finetune"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
transformers = "^4.55.4"
datasets = "^4.0.0"
torch = {version = "^2.8.0", extras = ["cpu"]}
accelerate = "^1.10.0"
nbstripout = "^0.8.1"
torchvision = "^0.23.0"
torchaudio = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
